# idris-9front-backend

./: .gitignore  .gitmodules  README.md  idris-9frontc.cabal  stack.yaml
idris-py/: stack.yaml
src/: Main.hs
src/IRTS/: Codegen9FrontC.hs  System.hs
src/obsolete.rts/: bool.h  build.rc  common.h  idris_gmp.c  idris_gmp.h  idris_heap.c  idris_heap.h  idris_rts.c  idris_rts.h  idris_stats.c  idris_stats.h  mkfile  testmp.c
test/: .gitignore  cases.txt  hello.idr  linear-types-hello.idr  mkfile  pythag.idr  pythag.php  test-vect.idr  test.c  test.h  uhello  uniqueness-types-hello.c  uniqueness-types-hello.idr
