Name:           idris-9frontc
Version:        0.0.0.1
License:        BSD3
License-file:   LICENSE
Author:         Edwin Brady
Maintainer:	Edwin Brady <ecb10@st-andrews.ac.uk>
Build-Type:	Simple
Cabal-Version:  >= 1.8

Executable idris-codegen-9frontc
  Main-is:        Main.hs
  hs-source-dirs: src

  Build-depends:  idris
                , process
                , base >=4 && <5
                , aeson >= 0.6 && < 1.1
                , annotated-wl-pprint >= 0.7 && < 0.8
                , ansi-terminal < 0.7
                , ansi-wl-pprint < 0.7
                , array >= 0.4.0.1 && < 0.6
                , base64-bytestring < 1.1
                , binary >= 0.7 && < 0.9
                , blaze-html >= 0.6.1.3 && < 0.9
                , blaze-markup >= 0.5.2.1 && < 0.8
                , bytestring < 0.11
                , cheapskate < 0.2
                , containers >= 0.5 && < 0.6
                , deepseq < 1.5
                , directory >= 1.2.2.0 && < 1.2.3.0 || > 1.2.3.0
                , filepath < 1.5
                , fingertree >= 0.1 && < 0.2
                , haskeline >= 0.7 && < 0.8
                , ieee754 >= 0.7 && < 0.8
                , mtl >= 2.1 && < 2.3
                , network < 2.7
                , optparse-applicative >= 0.11 && < 0.14
                , parsers >= 0.9 && < 0.13
                , pretty < 1.2
                , regex-tdfa >= 1.2
                , split < 0.3
                , terminal-size < 0.4
                , text >=1.2.1.0 && < 1.3
                , time >= 1.4 && < 1.7
                , transformers < 0.6
                , transformers-compat >= 0.3
                , trifecta >= 1.6 && < 1.7
                , uniplate >=1.6 && < 1.7
                , unordered-containers < 0.3
                , utf8-string < 1.1
                , vector < 0.12
                , vector-binary-instances < 0.3
                , zip-archive > 0.2.3.5 && < 0.4
                , fsnotify >= 0.2 && < 2.2
                , async < 2.2

  other-modules: IRTS.Codegen9FrontC
               , IRTS.System
                -- Auto Generated
               , Paths_idris_9frontc

  if os(linux)
     cpp-options:   -DLINUX
     build-depends: unix < 2.8
  if os(freebsd)
     cpp-options:   -DFREEBSD
     build-depends: unix < 2.8
  if os(dragonfly)
     cpp-options:   -DDRAGONFLY
     build-depends: unix < 2.8
  if os(darwin)
     cpp-options:   -DMACOSX
     build-depends: unix < 2.8
  if os(windows)
     cpp-options:   -DWINDOWS
     build-depends: Win32 < 2.4

  ghc-prof-options: -auto-all -caf-all
  ghc-options:      -threaded -rtsopts -funbox-strict-fields

  Extensions:     MultiParamTypeClasses
                , DeriveFoldable
                , DeriveTraversable
                , FunctionalDependencies
                , FlexibleContexts
                , FlexibleInstances
                , TemplateHaskell
